src/snapshots/afrotd__parser__tests__rule_html_9.1.14.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.1.14 Kontakt gegen den Snapper
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Befindet sich ein Team in einer Scrimmage Kick Formation und
                der Snapper befindet sich nicht am Ende der Scrimmage Line,
                darf ein Defense Spieler keinen Kontakt mit dem Snapper
                herstellen, bis eine Sekunde nach dem Snap vergangen ist (A.R.
                9.1.14.I bis 9.1.14.III).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.1.14"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
