src/snapshots/afrotd__parser__tests__rule_html_9.1.15.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.1.15 Horse Collar Tackle
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Allen Spielern ist es verboten, die Innenseite des Rücken- oder
                Seitenteils des Schulterschutzes oder des Trikots oder den
                Bereich des Namensschildes zu ergreifen und den Ballträger
                abrupt nach unten zu ziehen. Das gilt auch für den Ballträger,
                inklusive eines möglichen Passers, der sich innerhalb der
                Tackle Box befindet.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.1.15"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
