src/snapshots/afrotd__parser__tests__rule_html_9.1.18.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.1.18 Blind Side Block
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Kein Spieler darf einen Blind Side Block in Form eines Forcible
                Contact gegen einen Gegner ausführen (Ausnahmen: 1. Gegen einen
                Runner; 2. gegen einen Receiver, der versucht, einen Ball zu
                fangen). Zur Beachtung: Wenn die Aktion zusätzlich alle
                Elemente eines Targetings nach den Regeln 9.1.3 oder 9.1.4
                beinhaltet, ist es ein Blind Side Block mit Targeting und die
                Strafe wird nach Regel 9.1.3 oder 9.1.4 durchgeführt (A.R.
                9.1.18.I).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.1.18"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
