src/snapshots/afrotd__parser__tests__rule_html_9.1.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.1.2 Schlagen und Tripping
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Keine Person, die den Regeln unterliegt, darf einen Gegner
                mit dem Knie stoßen oder mit ausgestrecktem Unterarm,
                Ellenbogen, verschränkten Händen, der Handfläche, der Faust,
                dem Handballen, dem Handrücken oder der Handkante gegen den
                Helm (inklusive Helmgitter), den Hals, das Gesicht oder ein
                anderes Körperteil schlagen oder dem Gegner in die Augen
                stechen (A.R. 9.1.2.I).
                </li>
                <li>Keine Person, die den Regeln unterliegt, darf einen Gegner
                mit dem Fuß oder einem Körperteil unterhalb des Knies treten.
                </li>
                <li>Tripping ist verboten. Tripping ist der absichtliche
                Einsatz des eigenen Schienbeins oder des Fußes, um einen Gegner
                unterhalb dessen Knie zu behindern (Regel 2.28.1).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.1.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
