src/snapshots/afrotd__parser__tests__rule_html_9.1.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.1.3 Targeting und Forcible Contact mit der
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Helmoberseite Kein Spieler darf einen Gegner durch ein
                Targeting mit der Helmoberseite angreifen und einen Forcible
                Contact herstellen. Die Helmoberseite ist der obere Teil des
                Helms, spezifiziert durch den kreisförmigen Bereich um den
                Scheitelpunkt (Top) des Helms mit einem Radius von 15 cm. Das
                Foul erfordert, dass wenigstens ein Indikator des Targetings
                (siehe Anmerkung 1 unter 9.1.4) vorhanden sein muss. Im Zweifel
                ist der Kontakt ein Foul (A.R. 9.1.3.I).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.1.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
